Fix text-aligning to center

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -270,6 +270,7 @@ body {font-family: 'Gentium Basic', serif;
   margin-left: auto;
   margin-right: auto;
   font-size: 24px;
+  text-align: center;
 }
 
 .index-features-visible {
